- embeded 1st Core framework

--- a/Application/Application/Base.lproj/Main.storyboard
+++ b/Application/Application/Base.lproj/Main.storyboard
@@ -19,11 +19,11 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3R-Mz-Prt">
                                 <rect key="frame" x="187.5" y="437.5" width="39" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="O3R-Mz-Prt" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QgV-Be-fkT"/>
                             <constraint firstItem="O3R-Mz-Prt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rh0-oy-E1E"/>
